--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
             body{margin:0;padding:0}.min-h-full{min-height:100vh}.flex{display:flex}.flex-both-center{display:flex;justify-content:center;align-items:center}.flex-wrap{flex-wrap:wrap}.flex-h-center{display:flex;justify-content:center}.flex-dir-c{flex-direction:column}.mt-8{margin-top:12px}.mt-16{margin-top:16px}.mt-24{margin-top:24px}.mt-32{margin-top:32px}.mt-36{margin-top:48px}.m-auto{margin:auto}.ml-6{margin-left:6px}.ln-h-22{line-height:22px}.text-fs-16{font-size:16px}.page-overlay{background:rgba(0,0,0,.1);-webkit-backdrop-filter:blur(45px);backdrop-filter:blur(45px);z-index:100}.page-image,.page-overlay{position:fixed;left:0;top:0;width:100vw;height:100vh}.display-image,.page-image{-o-object-fit:cover;object-fit:cover}.display-image{width:96px;height:96px;display:block;border-radius:50%}.text-center{text-align:center}.page-title{margin-bottom:0}.page-bioline{font-weight:500}.page-full-wrap{width:680px;z-index:10;padding-bottom:176px}.page-item-wrap{transition:transform .15s cubic-bezier(.17,.67,.29,2.71) 0s}.page-item-wrap:hover{transform:translateZ(0) scale(1.015)}.page-item{box-sizing:border-box}.page-social{display:block;margin:0 12px 12px}.page-social svg{width:28px;height:28px}.relative{position:relative}.link-each-image{width:43px;height:43px;position:absolute;left:9px;-o-object-fit:cover;object-fit:cover}.page-logo{position:absolute;bottom:32px;left:calc(50% - 15px)}.rounded-md{border-radius:8px}.close-embed{width:25px;height:25px;border-radius:50%;background:#fff;opacity:.7}.embed-wrap{position:absolute;left:0;top:0;width:100%}.close-embed:hover{opacity:1}.cursor-pointer{cursor:pointer}.page-item-each{position:absolute;left:0;top:0;width:100%;height:100%;text-decoration:none;overflow:hidden;z-index:10}.social-icon-fill:hover{transition:all .1s ease-in-out;transform:scale(1.1)}.page-item-title{font-weight:700;margin-bottom:16px}@media (max-width:768px){.page-full-wrap{width:90%}}
         </style>
 
-#heart {
+
+        <style>
+            #heart {
     grid-column: span 2;
     display: grid;
     grid-template-rows: 2;
@@ -52,15 +54,10 @@
     color: #b90d46;
 }
 
-        <style>
                         .page-image {
                     object-position: center;
                 }
             
-            .display-image {
-                
-            }
-
             .page-title {
                 font-size: 18px;
                 font-weight: 700;
@@ -124,19 +121,8 @@ body{
 -o-user-select: none;
 user-select: none;
 }
-</style><script type=”text/JavaScript”>
-function killCopy(e){
-return false
-}
-function reEnable(){
-return true
-}
-document.onselectstart=new Function (“return false”)
-if (window.sidebar){
-document.onmousedown=killCopy
-document.onclick=reEnable
-}
-</script>
+</style>
+
 
     <body>
                 <div id="heart" >
@@ -226,7 +212,7 @@ document.onclick=reEnable
                                                                                         <div class="page-item-wrap relative">
                             <div class="page-item flex-both-center relative"></div>
                             <a target="_blank" rel="noopener nofollow" class="page-item-each flex-both-center"
-                               href="hunghaix71@gmail.com"
+                               href="mailto:hunghaix71@gmail.com"
                                data-id="10022" data-type="page_item">
                                                                 <img
                                         class="link-each-image"
